--- a/index.html
+++ b/index.html
@@ -24,8 +24,6 @@
   <link rel="alternate" type="application/rss+xml" title="Omegat - The Free Translation Memory Tool" href="/omegat-website/feed.xml">
 
   
-  
-  
 </head>
 
 
@@ -184,7 +182,7 @@ translation", and you will have to look elsewhere for it.)</p>
         </div>
         <div class="col-md-4 text-md-center">
           <p>
-            <a class="btn btn-default" href="dl_overview" role="button">Download Overview</a>
+            <a class="btn btn-default" href="download#selector" role="button">Download Overview</a>
           </p>
         </div>
       </div>
